# node-canvas

./: .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  History.md  LICENSE  Makefile  README.md  Readme.md  SUPPORT.md  Windows.Readme.txt  appveyor.yml  binding.gyp  browser.js  build.sh  build.zig  build.zig.zon  canvas.gypi  configure  index.d.ts  index.js  index.mjs  index.test-d.ts  install  install_packages.sh  node-waf.bat  package-lock.json  package.json  pls  pnpm-lock.yaml  pnpm-workspace.yaml  repro.js  rustfmt.toml  shared.gyp  shared.gypi  (+4 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  build-prebuild.yaml  build.yml  ci.yaml  image.yaml  prebuild.yaml  publish.yaml  testprebuild.yaml
a/: package.json
benchmarks/: run.js
crates/canvas/: Cargo.toml
crates/canvas/src/: create.rs  lib.rs  test.rs
crates/canvas/src/canvas/: canvas.rs  cap.rs  fill.rs  format.rs  gradient.rs  join.rs  mod.rs  mode.rs  operation.rs  pattern.rs
crates/canvas/src/config/: buffer.rs  jpeg.rs  mod.rs  pdf.rs  png.rs
crates/canvas/src/context/: context.rs  mod.rs  rect.rs  settings.rs  text.rs
crates/canvas/src/dom/: mod.rs  point.rs
crates/canvas/src/dom/matrix/: changes.rs  convert.rs  flip.rs  from.rs  inverse.rs  macros.rs  mod.rs  ops.rs  out.rs  parse.rs  rotate.rs  scale.rs  skew.rs  tests.rs  transform.rs  translate.rs  util.rs  values.rs
crates/canvas/src/dom/matrix/ops/: mod.rs  mul.rs
crates/canvas/src/dom/matrix/tests/: flip.rs  inverse.rs  mod.rs  rotate.rs  rotate_axis.rs  rotate_vec.rs  scale.rs  scale_3d.rs  skew.rs  transform.rs  translate.rs
crates/canvas/src/image/: data.rs  filters.rs  image.rs  kind.rs  mod.rs  mode.rs  quality.rs  repeat.rs
crates/canvas/src/text/: align.rs  baseline.rs  font.rs  metrics.rs  mod.rs  mode.rs
crates/canvas/src/util/: expose.rs  macros.rs  mod.rs
crates/macros/: Cargo.toml
crates/napi-derive/: Cargo.toml  README.md
crates/napi-derive/src/: compat_macro.rs  lib.rs
crates/napi-derive/src/expand/: mod.rs  napi.rs  noop.rs
crates/napi-derive/src/parser/: attrs.rs  mod.rs
crates/raqote/: Cargo.toml  LICENSE  README.md
crates/raqote/src/: blitter.rs  dash.rs  draw_target.rs  geom.rs  lib.rs  path_builder.rs  rasterizer.rs  stroke.rs  tests.rs
crates/typed-arena/: Cargo.toml  README.md
crates/typed-arena/src/: lib.rs  test.rs
docs/: apis.md  progress.md
examples/: animated_clock.js  backends.js  benchmark.js  caca.js  clock.js  crop.js  fill-evenodd.js  font.js  framebuffer-doublebuffer.js  framebuffer.js  globalAlpha.js  gradients.js  grayscale-image.js  image-caption-overlay.js  image-src-svg.js  image-src-url.js  image-src.js  indexed-png-alpha.js  indexed-png-image-data.js  kraken.js  live-clock.js  multi-page-pdf.js  pango-glyphs.js  pdf-images.js  pdf-link-rect.js  pdf-link.js  ray.js  resize.js  rhill-voronoi-core-min.js  simple_fbdev.js  simple_x11.js  small-pdf.js  small-svg.js  spark.js  state.js  text.js  voronoi.js  worker-threads.js
examples/pfennigFont/: FONTLOG.txt  OFL.txt  PfennigBold.sfd  PfennigBoldItalic.sfd
jpeg/: .gitignore  Cargo.toml  build.rs  build_libjpeg.sh  wrapper.hpp
lib/: DOMMatrix.js  Image.js  Path2D.js  bindings.js  buffer-creator.js  buffer.js  canvas.js  colors.js  context2d.js  image.js  imagestream.js  jpegstream.js  parse-font.js  pattern.js  pdfstream.js  pixelarray.js  pngstream.js  utils.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/linux-x86-gnu/: package.json
npm/linux-x86-musl/: package.json
npm/win32-arm64/: package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64/: package.json
npm/win32-x64-msvc/: README.md  package.json
npm/win32-x86/: package.json
patches/: apply_patches.sh  nan_callbacks_12_inl.patch  v8.patch  zig.patch
pkg/cairo/: build.zig  build.zig.zon  sources.zig
png/: .gitignore  Cargo.toml  build.rs  build_libpng.sh  wrapper.h
prebuild/: node-gyp-filename.js  package.json  tarball.sh
scripts/: completion.py  packages.js  postbuild.js  version.js
src/: AddonData.cc  AddonData.h  Backend.cc  Backend.h  Backends.cc  Backends.h  Caca.cc  Caca.h  Canvas.cc  Canvas.h  CanvasError.h  CanvasGradient.cc  CanvasGradient.h  CanvasPattern.cc  CanvasPattern.h  CanvasRenderingContext2d.cc  CanvasRenderingContext2d.h  CharData.h  Font.h  FontFace.cc  FontFace.h  FontFaceSet.cc  FontFaceSet.h  FontLayout.cc  FontLayout.h  FontManager.cc  FontManager.h  FontManagerLinux.cc  FontManagerLinux.h  FontManagerMacos.cc  FontManagerMacos.h  FontManagerWindows.cc  FontManagerWindows.h  FontParser.cc  FontParser.h  Image.cc  Image.cc.orig  Image.h  ImageData.cc  ImageData.h  (+48 more)
static/: cairo.gyp  cairo.gypi  common.gyp  common.gypi  ensure_deps.sh  expat.gyp  expat.gypi  ffi.gyp  ffi.gypi  fontconfig.gyp  fontconfig.gypi  freetype.gyp  freetype.gypi  gif.gyp  gif.gypi  glib.gyp  glib.gypi  harfbuzz.gyp  harfbuzz.gypi  jpeg.gyp  jpeg.gypi  libpng.gyp  libpng.gypi  locations.gyp  pango.gyp  pango.gypi  pixman.gyp  pixman.gypi  zlib.gyp  zlib.gypi
test/: canvas.test.js  corruption.test.js  dommatrix.test.js  fontParser.test.js  image.test.js  imageData.test.js  memory.test.js  server.js  worker.js  worker.test.js
types/: Readme.md  index.d.ts  test.ts  tsconfig.json  tslint.json
util/: cairo_include.sh  check_strndup.c  has_cairo_freetype.sh  has_lib.js  has_lib.sh  has_pangocairo.sh  has_pkgconfig_lib.sh  has_strndup.sh  lib_lookup.sh  win_jpeg_lookup.js
(+142 files in other folders)
