[package]
edition = "2021"
name = "canvas"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
cairo-rs = { version = "0.18.0", features = ["freetype", "png", "svg", "pdf"] }
png-sys = { version = "0.1.0", path = "png" }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pango = "0.18.0"
jpeg-sys = { version = "0.1.0", path = "jpeg" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[workspace]
members = [
    "png",
    "jpeg"
]
