[package]
name = "canvas"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
bitflags = { version = "2.4.1", features = ["serde"] }
canvas-macros = { version = "0.0.0", path = "../macros" }
cfg-if = "1.0.0"
concat-idents = "1.1.5"
csscolorparser = { version = "0.6.2", features = ["rgb", "serde"] }
derive_builder = "0.13.0"
either = { version = "1.9.0", features = ["serde"] }
font-kit = { version = "0.12.0", features = ["freetype", "loader-freetype", "loader-freetype-default", "source-fontconfig"] }
lazy_static = "1.4.0"
napi = { version = "2.14.1", features = ["full"] }
napi-derive = "2.14.6"
once_cell = "1.19.0"
paste = "1.0.14"
raqote = { version = "0.1.0", path = "../raqote" }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
napi-build = "2.1.0"
