[package]
name = "napi-derive"
version = "0.1.0"
edition = "2021"

[features]
compat-mode = []
default = ["compat-mode", "full"]
full = ["type-def", "strict"]
noop = ["napi-derive-backend/noop"]
strict = ["napi-derive-backend/strict"]
type-def = ["napi-derive-backend/type-def"]

[dependencies]
cfg-if = "1.0.0"
convert_case = "0.6.0"
napi-derive-backend = "1.0.58"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["fold", "full", "extra-traits"] }
